# diplomacy

./: CMakeLists.txt  conanfile.py
cmake/: diplomacyConfig.cmake.in
data/: map.json
diplomacy/: CMakeLists.txt
diplomacy/data/: map.json
diplomacy/src/: game.cpp  game.h  main.cpp  map.cpp  map.h  player.h  region.cpp  region.h  unit.h  utils.cpp
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  map.cpp  map.h  player.cpp  player.h  region.h  unit.h  utils.h
